src/test/ui/type-alias-impl-trait/structural-match.stderr
error: constant pattern depends on a generic parameter
  --> $DIR/structural-match.rs:15:9
   |
LL |         VALUE => (),
   |         ^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/structural-match.rs:15:9
   |
LL |         VALUE => (),
   |         ^^^^^

error: aborting due to 2 previous errors

